# perception

./: LICENSE  README.md  index.html  params.json
color_only/: CMakeLists.txt  image_pub.cpp  package.xml  test.cpp
color_only/include/color_only/: color_only.h
cuda_renderer/: CMakeLists.txt  atomic  atomic.cu  package.xml  render_hist.cpp  renderer.cpp  renderer.cu
cuda_renderer/include/cuda_renderer/: common.cuh  compute_costs.cuh  compute_point_clouds.cuh  image_renderer.cuh  model.h  renderer.h  utils.cuh
cuda_renderer/include/cuda_renderer/cuda/: common.cuh  compute_costs.cuh  compute_point_clouds.cuh  image_renderer.cuh
cuda_renderer/src/: model.cpp  renderer.cpp
cuda_renderer/src/cuda/: renderer.cu
docker/: Dockerfile  docker-compose.yml
hist_prioritze/: CMakeLists.txt  hist.cu  package.xml  renderer.cu  test.cpp
hist_prioritze/include/hist_prioritize/: hist.h
object_recognition_node/: CMakeLists.txt  package.xml
object_recognition_node/include/object_recognition_node/: object_localizer_service.h  perception_interface.h
object_recognition_node/launch/: cuboid_conveyor_object_recognition.launch  pr2_conveyor_moving_object_recognition.launch  pr2_conveyor_object_recognition.launch  pr2_conveyor_object_recognition_cpu.launch  roman_object_recognition_gpu_robot.launch  roman_object_recognition_robot.launch  walker_object_recognition_robot.launch
object_recognition_node/rviz/: pr2_conveyor.rviz  realsense_camera_robot.rviz
object_recognition_node/src/: object_localizer_service.cpp  perception_interface.cpp
sbpl_perception/: CMakeLists.txt  package.xml  qqqCMakeLists.txt
sbpl_perception/config/: pr2_conv_env_config.yaml  pr2_conv_env_config_cpu.yaml  pr2_env_config.yaml  pr2_gpu_conv_env_config.yaml  pr2_gpu_env_config.yaml  pr2_gpu_robot_conv_env_config.yaml  pr3_env_config.yaml  pr3_jenga_env_config.yaml  roman_env_config.yaml  roman_gpu_env_config.yaml  roman_gpu_robot_env_config.yaml  roman_objects.xml  walker_env_config.yaml  ycb_objects.xml
sbpl_perception/data/crate/: crate_test.ply
sbpl_perception/experiments/src/: perch_fat.cpp
sbpl_perception/include/sbpl_perception/: graph_state.h  mpi_utils.h  object_model.h  object_recognizer.h  search_env.h
sbpl_perception/src/: aaa.cpp  object_model.cpp  object_recognizer.cpp  search_env.cpp
sbpl_perception/src/scripts/tools/fat_dataset/: bad_images.py  config.yaml  config_can_dataset_docker.yaml  config_conveyor.yaml  config_conveyor_docker.yaml  config_crate_dataset.yaml  config_crate_dataset_docker.yaml  config_docker.yaml  config_image.yaml  config_jenga.yaml  config_jenga_docker.yaml  config_jenga_image.yaml  config_jenga_tower_docker.yaml  convert_fat_coco.py  densefusion.py  dope_image.py  fat_pose_image.py  image_node.py  perch.py  plot.py  predictor.py  rviz.rviz  sphere_fibonacci_grid_points.py  utils.py  visualize_fat_coco.py
sbpl_perception/visualization/NewMap1_reduced_2_000000_left/: output_poses.txt  output_stats.txt
